# bedRMod

./: README.md  bed2vcf.jl  pyproject.toml  requirements.txt  sam2bedmod.ipynb
.github/workflows/: pypi-publish.yaml
GUI/: connector.py  controller.py  main.py  run_gui.py  view.py
bedRMod/: __init__.py  convert2bedRMod.py  helper.py  read.py  write.py
bedRMod/gui/: controller.py  main.py  view.py
convert2bedRMod/: convert2bedRMod.py  helper.py  make_mod_indices.py  pileup2proEUF.py  run_conversion.py
convert2bedRMod/example_files/: MH1601_both_GCF_ref_localN1L10nofwD20R3k1.proEUF  alltRNA_sequences_chrom_start_stop_transstart_strand_exonstart_exonend.fasta  mod_indices.csv  modomics_shortvalues.txt
convert2bedRMod/fastx2pileup/: 02_samtools.py
examples/: example_config.yaml
flat2euf/: config.yml  flat2euf.py
flat2euf/m6aSACseq/euf/: GSE198246_2ng.json  GSE198246_50ng.json  MH1601_GCA.proEUF  MH1601_GCF_local.bed  mod_indices.csv  output_file.bed  output_header_file.bed
modSAM2bedRMod/: README.md  read_SAM.py  samtags_helper.py
modSAM2bedRMod/example_files/: MM-multi.sam  MM-orient.sam
test/: convert2bedrmod_test.py  helper_test.py  read_test.py  test_config.yaml  test_csv2bedrmod.csv  test_csv_config.yaml  test_static_csv2bedrmod.bedrmod  test_static_csv2bedrmod.csv  test_static_df2bedrmod.bedrmod  tsv2bedrmod_test.py  write_test.py
tsv2bedRMod/: DAMM-seq.ipynb  MePMe2BedRMod.ipynb  RBS-seq.ipynb  config.yaml  helper.py  make_mod_indices.py  pileup2proEUF.py  run_conversion.py  tsv2bedRMod.py  ubs-seq.ipynb
tsv2bedRMod/example_files/: MH1601_both_GCF_ref_localN1L10nofwD20R3k1.pileup  test_frankenstein.bedrmod  test_frankenstein.euf.bed
tsv2bedRMod/fastx2pileup/: 02_samtools.py
tsv2euf/: accessgeo.py  config.yaml  helper.py  make_mod_indices.py  pileup2proEUF.py  pileup2profile.py  tsv2euf.py
tsv2euf/example_files/: mod_indices.csv  tRNA_sequences.json  test_frankenstein.bed
tsv2euf/fastx2pileup/: 01_bowtie2.py  02_samtools.py
