[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedRMod"
version = "1.8.4"
requires-python = ">=3.8"
authors = [
  { name="Anne Busch", email="anne.busch@uni-mainz.de" },
]
description = "A small example package"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy==2.1.3", "pandas==2.2.3", "PySide6==6.8.0.2", "pytest==8.3.3", "PyYAML>=6.0.1"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build]
debug = true
include = [
    "bedRMod/**", 
    "README.md", 
    "LICENSE",
    "bedRModv1.8.pdf", 
]
exclude = [
    "**/.gitignore",
     "test/**",  
     "examples/**", 
     "convert2bedRMod/**", 
     "flat2euf/**", 
     "modSAM2bedRMod/**",
]
[project.gui-scripts]
bedRMod-gui = "bedRMod.gui.main:main"