[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedRMod"
version = "1.8.17"
requires-python = ">=3.9"
authors = [
  { name="Anne Busch", email="anne.busch@uni-mainz.de" },
]
description = "A small example package"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24.0, <2.1.0", "pandas>=2.2.2", "PySide6>=6.6.1", "pytest>=7.3.1", "pyYAML>=6.0.1"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build]
debug = true
include = [
    "bedRMod/**", 
    "README.md", 
    "LICENSE",
    "bedRModv1.8.pdf", 
]

[project.gui-scripts]
bedRMod-gui = "bedRMod.gui.main:start_gui"
